--- a/el proyecte grande sprint 1/el proyecte grande sprint 1.csproj
+++ b/el proyecte grande sprint 1/el proyecte grande sprint 1.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>el_proyecte_grande_sprint_1</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\categories\" />
+  </ItemGroup>
+
 </Project>
