Refactor: Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,8 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /el proyecte grande sprint 1/wwwroot/Images/categories
+/el proyecte grande sprint 1/wwwroot/favicon46.ico
+/el proyecte grande sprint 1/wwwroot/favicon43.ico
+/el proyecte grande sprint 1/wwwroot/favicon3.ico
+/el proyecte grande sprint 1/wwwroot/favicon2.ico
+/el proyecte grande sprint 1/Views/User/Credentials.cshtml
