feat: Add .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,6 @@ FodyWeavers.xsd
 /el proyecte grande sprint 1/wwwroot/favicon3.ico
 /el proyecte grande sprint 1/wwwroot/favicon2.ico
 /el proyecte grande sprint 1/Views/User/Credentials.cshtml
+/el proyecte grande sprint 1/dwd.txt
+/el proyecte grande sprint 1/wwwroot/User/backgrounds/spacex.jpg
+/el proyecte grande sprint 1/wwwroot/backgrounds/spacex.jpg
