feat: Add spacex.jpg to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -373,3 +373,4 @@ FodyWeavers.xsd
 /el proyecte grande sprint 1/dwd.txt
 /el proyecte grande sprint 1/wwwroot/User/backgrounds/spacex.jpg
 /el proyecte grande sprint 1/wwwroot/backgrounds/spacex.jpg
+el proyecte grande sprint 1/project-lens/src/components/spacex.jpg
