--- a/el proyecte grande sprint 1/el proyecte grande sprint 2.csproj
+++ b/el proyecte grande sprint 1/el proyecte grande sprint 2.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="3.1.21" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.19" />
   </ItemGroup>
