--- a/.gitignore
+++ b/.gitignore
@@ -374,3 +374,4 @@ FodyWeavers.xsd
 /el proyecte grande sprint 1/wwwroot/User/backgrounds/spacex.jpg
 /el proyecte grande sprint 1/wwwroot/backgrounds/spacex.jpg
 el proyecte grande sprint 1/project-lens/src/components/spacex.jpg
+/el proyecte grande sprint 1/project-lens/src/components/AlternativeUpload.js
