--- a/el proyecte grande sprint 1/appsettings.json
+++ b/el proyecte grande sprint 1/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ProjectLensDatabase2": "Server=(localdb)\\mssqllocaldb;Database=ProjectLens;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
