refactor: Change Connection String name

--- a/el proyecte grande sprint 1/appsettings.json
+++ b/el proyecte grande sprint 1/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ProjectLensDatabase2": "Server=(localdb)\\mssqllocaldb;Database=ProjectLens;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ProjectLensDatabase": "Server=(localdb)\\mssqllocaldb;Database=ProjectLens;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
